--- a/frontend/src/HomePage/styles.css
+++ b/frontend/src/HomePage/styles.css
@@ -1,34 +1,77 @@
 .page {
-  background-color: rgb(224, 224, 224);
-  display: flex;
+  background: linear-gradient(to right, rgb(97, 67, 133), rgb(81, 99, 149));  display: flex;
   flex-direction: column;
   justify-content: center;
   height: 100vh;
   align-items: center;
   row-gap: 20px;
+  display: flex;
+}
+
+.card {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  row-gap: 20px;
+  margin: 0 20px;
+  min-width: 40%;
+  border-radius: 10px;
+  -webkit-box-shadow: 6px 6px 17px -4px rgba(0,0,0,0.75);
+  -moz-box-shadow: 6px 6px 17px -4px rgba(0,0,0,0.75);
+  box-shadow: 6px 6px 17px -4px rgba(0,0,0,0.75);
+  transition: all ease-in-out 0.6s;
 }
 
 .pageTitle {
-  font-size: 60px;
+  font-size: 80px;
   font-weight: 700;
   letter-spacing: 10px;
+  margin: 20px auto;
+  width: auto;
+  word-break: break-word;
+  text-align: center;
+  transition: all ease-in-out 0.6s;
+}
+
+.t-stroke {
+ color: transparent;
+ -moz-text-stroke-width: 2px;
+ -webkit-text-stroke-width: 2px;
+ -moz-text-stroke-color: #000000;
+ -webkit-text-stroke-color: #ffffff;
+}
+
+.t-shadow {
+ text-shadow: 4px 4px #8dffcd;
 }
 
 .title {
   text-align: left;
   font-size: 20px;
   font-weight: 600;
-  margin-bottom: 20px;
+  align-self: center;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+}
+
+.subtitle {
+  text-align: left;
+  font-size: 15px;
+  margin-bottom: 10px;
+  font-style: italic;
 }
 
 .button {
   display: flex;
   align-self: flex-end;
 }
-.card {
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  padding: 40px;
-  width: 40%;
+
+@media only screen and (max-width: 576px){
+  .pageTitle {
+    font-size: 60px;
+  }
 }
