--- a/frontend/src/HomePage/styles.css
+++ b/frontend/src/HomePage/styles.css
@@ -13,9 +13,10 @@
   display: flex;
   flex-direction: column;
   padding: 30px;
-  row-gap: 20px;
+  justify-content: space-between;
   margin: 0 20px;
-  min-width: 40%;
+  width: 300px;
+  height: 280px;
   border-radius: 10px;
   -webkit-box-shadow: 6px 6px 17px -4px rgba(0,0,0,0.75);
   -moz-box-shadow: 6px 6px 17px -4px rgba(0,0,0,0.75);
@@ -47,7 +48,7 @@
 }
 
 .title {
-  text-align: left;
+  text-align: center;
   font-size: 20px;
   font-weight: 600;
   align-self: center;
@@ -56,6 +57,7 @@
 .form {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 
 .subtitle {
@@ -74,4 +76,11 @@
   .pageTitle {
     font-size: 60px;
   }
+}
+
+.buttonsContainer {
+  display: flex;
+  margin-top: 20px;
+  justify-content: space-between;
+  column-gap: 20px;
 }
